# scikit-aero

./: .readthedocs.yml  AUTHORS  CREDITS.md  README.md  pyproject.toml  test_results.vsp3.txt  tox.ini
.github/workflows/: docs.yml  publish.yml  test.yml
src/skaero/orbitalmechanics/: AttD Example.py  __init__.py  attdexample.ipynb  attitudedynamics.py  orbit.py
src/skaero/reference/: acronyms.rst  conversion.py
test_results/: Sparrow3-Rev1.vsp3.txt
tests/: conftest.py  test_isentropic.py  test_orbit.py  test_shocks.py  test_sizing.py
tests/test_results/: Sparrow3 Rev 1.vsp3
