[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scikit-aero"
version = "1.0.0"
description = "Aeronautical engineering calculations in Python with support for parametric design"
authors = [
    {name = "Juan Luis Cano", email = "hello@juanlu.space"},
    {name = "Andrew James Doty", email = "doty.andrewj@utexas.edu"},
]
maintainers = [
    {name = "Andrew James Doty", email = "doty.andrewj@utexas.edu"},
    {name = "Dennis Hom", email = "dennis.hom@utexas.edu"}

]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["aero", "aeronautical", "aerospace", "engineering", "atmosphere", "gas", "aircraft-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "pint>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "nbsphinx>=0.8",
]

[project.urls]
Homepage = "https://github.com/AeroPython/scikit-aero"
Documentation = "https://scikit-aero.readthedocs.io/"
Repository = "https://github.com/AeroPython/scikit-aero.git"
Issues = "https://github.com/AeroPython/scikit-aero/issues"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi-line-output = 3
